add project private/public label; CAPI usage

--- a/translations/catroweb.en.yaml
+++ b/translations/catroweb.en.yaml
@@ -117,6 +117,8 @@ programs:
     There is no way to restore your actions!
     Yes, delete it!
     Cancel
+  private: private
+  public: public
   setPrivateAction: Set private
   setPublicAction: Set public
   changeVisibility: |+
