--- a/translations/catroweb.en.yaml
+++ b/translations/catroweb.en.yaml
@@ -576,6 +576,7 @@ api:
     passwordInvalidChars: 'Password contains invalid chars'
     usernameContainsEmail: "Username must not contain an email address"
     countryCodeInvalid: "Country code invalid"
+    pictureInvalid: "Profile picture invalid or not supported"
   updateUser:
     currentPasswordMissing: "Current password is missing"
     currentPasswordWrong: "Current password is wrong"
