Frontend: Introduce [ApiHelper, MessageDialogs, ProjectApi] and use it in own profile stuff

--- a/translations/catroweb.en.yaml
+++ b/translations/catroweb.en.yaml
@@ -486,6 +486,7 @@ format:
 
 #api
 errors:
+  unspecified: An unspecified error occurred. Please contact us.
   username:
     blank: Username must not be blank
     invalid: Your username is invalid
